# Chip-8-emulator

./: CMakeLists.txt  README.md
source/: chip.cpp  chip.h  chip.hpp  main.cpp  platform.cpp  platform.hpp
source/glad/: glad.c  glad.h
